# ocaml-theora

./: .travis.yml  CHANGES  Makefile.in  README  README.md  configure.ac  dune-project  theora.opam
examples/: Makefile  Makefile.thdecode  Makefile.thencode  Makefile.thtranscode  thdecode.ml  thencode.ml  thtranscode.ml
src/: META.in  Makefile.in  ogg_demuxer_theora_decoder.ml  theora.ml  theora.mli  theora_stubs.c
src/config/: discover.ml
