opam-version: "2.0"
version: "dev"
maintainer: "Romain Beauxis <toots@rastageeks.org>"
authors: "The Savonet Team <savonet-users@lists.sourceforge.net>"
homepage: "https://github.com/savonet/ocaml-theora"
bug-reports: "https://github.com/savonet/ocaml-theora/issues"
depends: ["ocaml" "ocamlfind" "ogg"]
flags: light-uninstall
build: [
  ["./bootstrap"]
  ["./configure" "--prefix" prefix]
  [make "clean"]
  [make]
]
install: [make "install"]
remove: ["ocamlfind" "remove" "theora"]
depexts: [
  ["libtheora-devel"] {os-distribution = "centos"}
  ["libtheora-devel"] {os-distribution = "fedora"}
  ["libtheora-devel"] {os-distribution = "opensuse"}
  ["theora"] {os = "macos" & os-distribution = "homebrew"}
  ["libtheora-dev"] {os-distribution = "ubuntu"}
  ["libtheora-dev"] {os-distribution = "debian"}
]
dev-repo: "git+https://github.com/savonet/ocaml-theora.git"
